# lazysloth

./: .gitignore  CLAUDE.md  Makefile  README.md  TESTING.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
fastparrot/: __init__.py  __main__.py  cli.py
fastparrot/collectors/: alias_collector.py
fastparrot/core/: auto_learner.py  config.py  fastparrotrc.py  installer.py
fastparrot/monitors/: __main__.py  command_monitor.py  hook.py
lazysloth/: __init__.py  __main__.py  cli.py
lazysloth/collectors/: alias_collector.py
lazysloth/core/: auto_learner.py  config.py  file_watcher.py  installer.py  slothrc.py
lazysloth/monitors/: __main__.py  command_monitor.py  hook.py
tests/: README.md  conftest.py  test_runner.py
tests/fixtures/: sample_configs.py
tests/integration/: test_bash_integration.py  test_cli.py  test_hook.py
tests/unit/: test_alias_collector.py  test_auto_learner.py  test_command_monitor.py  test_config.py  test_file_watcher.py  test_installer.py
